# skysim

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  spec.md
skysim/: __init__.py  config.py  coordinates.py  seed.py
skysim/api/: server.py
skysim/layers/: base.py  galaxies.py  lss.py  stars.py
skysim/models/: igm.py  mass_metallicity.py  mass_size.py  morphology.py  photometry.py  psf.py  schechter.py  sfh.py  stellar_model.py
skysim/scripts/: debug_lss.py  demo.py  generate_tables.py  validate.py  validate_lss.py
skysim/telescope/: noise.py  renderer.py
skysim/utils/: cosmology.py  image.py
tests/: test_config.py  test_coordinates.py  test_lss.py  test_mass_metallicity.py  test_mass_size.py  test_morphology.py  test_renderer.py  test_schechter.py  test_seed.py  test_stars.py
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
web/src/: App.css  App.tsx  api.ts
web/src/components/: Controls.tsx  ImageViewer.tsx  SkyMiniMap.tsx
web/src/utils/: stretch.ts
